# pigeon

./: .gitignore  Cargo.toml  package.json
src/: lib.rs  lua.rs  main.rs  model.rs
src/components/: definition_card.rs  history_entry_card.rs  mod.rs  text_input.rs
src/lua/: plugin.rs  runtime.rs
tui/: package.json  tsconfig.json
tui/src/: app.tsx  index.tsx  types.ts
tui/src/debug/: xstateDebug.ts
tui/src/ffi/: bindings.ts  client.ts  confi.ts  core.ts  worker.ts
tui/src/machines/: focusMachine.ts  requestMachine.ts
tui/src/ui/: DebugPanel.tsx  KeyHints.tsx  MethodDropdown.tsx  SplitPane.tsx  TabBar.tsx  TextArea.tsx  theme.ts
